--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -245,6 +245,10 @@ $round-border: 25px;
   text-align: right;
 }
 
+.of-hidden {
+  overflow: hidden;
+}
+
 // vuetify tweaks start
 
 .v-input__slot {
