--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -57,6 +57,10 @@ h1 {
   justify-content: space-between;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
