--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -285,6 +285,25 @@ $darker-blue: #477EE6;
   display: block;
 }
 
+.profile-head {
+  padding: 50px;
+  background-color: grey;
+  margin-bottom: 50px;
+  color: white;
+}
+
+.content-inherit {
+  justify-content: inherit;
+}
+
+.flex-basis-20 {
+  flex-basis: 20%;
+  flex-grow: 0;
+}
+.align-center {
+  align-items: baseline;
+}
+
 @media(min-width:960px) {
   .v-card-holder {
     margin-bottom:20px;
