--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -85,7 +85,7 @@ h1 {
 .demiBold {
   font-family: AvenirNext;
   font-weight: 600;
-  &.employe {
+  &.employer {
     color: #69BDF2;
   }
   &.student {
